@@ -10,6 +10,7 @@ import pt.up.fe.specs.util.utilities.StringLines;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 
@@ -50,7 +51,6 @@ public class JasminGenerator {
         generators.put(Operand.class, this::generateOperand);
         generators.put(BinaryOpInstruction.class, this::generateBinaryOp);
         generators.put(ReturnInstruction.class, this::generateReturn);
-
         generators.put(CallInstruction.class, this::generateCall);
         generators.put(PutFieldInstruction.class, this::generatePutField);
         generators.put(GetFieldInstruction.class, this::generateGetField);
@@ -79,45 +79,26 @@ public class JasminGenerator {
         var className = ollirResult.getOllirClass().getClassName();
         code.append(".class ").append(className).append(NL).append(NL);
 
-        // TODO: Hardcoded to Object, needs to be expanded
-        String superclass = classUnit.getSuperClass() != null ? classUnit.getSuperClass().toString(): "java/lang/Object";
-        String superCode = ".super " + superclass;
+        String superclass = classUnit.getSuperClass() != null ? classUnit.getSuperClass() : "java/lang/Object";
 
-        code.append(superCode).append(NL);
-
-        String s;
+        code.append(".super ").append(superclass).append(NL);
 
         for (var field : ollirResult.getOllirClass().getFields()) {
-            if (field.getFieldType().getTypeOfElement() == ElementType.INT32) {
-                s = "I";
-            } else if (field.getFieldType().getTypeOfElement() == ElementType.BOOLEAN) {
-                s = "Z";
-            } else if (field.getFieldType().getTypeOfElement() == ElementType.VOID) {
-                s = "V";
-            } else if (field.getFieldType().getTypeOfElement() == ElementType.STRING) {
-                s = "Ljava/lang/String;";
-            } else {
-                s = "";
-            }
+            String fieldType = decideElementTypeForParamOrField(field.getFieldType().getTypeOfElement());
 
-            String access;
+            if (fieldType.equals("A"))
+                fieldType = "Ljava/lang/String;";
 
-            if (field.getFieldAccessModifier().name().equals("PUBLIC")) {
-                access = "public";
-            }
-            else {
-                access = "";
-            }
+            String fieldAccess = "";
+            if (field.getFieldAccessModifier().name().equals("PUBLIC"))
+                fieldAccess = "public";
 
-            String restriction;
-            if (field.isFinalField()) { restriction = " final"; }
-            else if (field.isStaticField()) { restriction = " static"; } else { restriction = ""; }
+            if (field.isFinalField())
+                fieldAccess += " final";
+            if (field.isStaticField())
+                fieldAccess += " static";
 
-            String field_code = ".field " + access + restriction + " " + field.getFieldName() + " " + s + NL;
-
-            code.append(field_code);
-
-
+            code.append(".field ").append(fieldAccess).append(" ").append(field.getFieldName()).append(" ").append(fieldType).append(NL);
         }
 
         // generate a single constructor method
@@ -161,53 +142,38 @@ public class JasminGenerator {
                 method.getMethodAccessModifier().name().toLowerCase() + " " :
                 "";
 
-        String restriction;
-        if (method.isFinalMethod()) { restriction = "final "; }
-        else if (method.isStaticMethod()) { restriction = "static "; } else { restriction = ""; }
+        String methodAccess = "";
+        if (method.isFinalMethod())
+            methodAccess = "final ";
+        if (method.isStaticMethod())
+            methodAccess = "static ";
 
         var methodName = method.getMethodName();
 
-        // TODO: Hardcoded param types and return type, needs to be expanded
-        code.append("\n.method ").append(modifier).append(restriction).append(methodName).append("(");
+        code.append("\n.method ").append(modifier).append(methodAccess).append(methodName).append("(");
 
+        // traverse method parameters
         for (Element argument : method.getParams()) {
-            ElementType elementType = argument.getType().getTypeOfElement();
-            if (elementType == ElementType.INT32) {
-                code.append("I");
-            } else if (elementType == ElementType.BOOLEAN) {
-                code.append("Z");
-            } else if (elementType == ElementType.VOID) {
-                code.append("V");
-            } else if (elementType == ElementType.STRING) {
-                code.append("Ljava/lang/String;");
-            } else if (elementType == ElementType.ARRAYREF) {
-                code.append("[Ljava/lang/String;");
-            }
-        }
+            String elementType = decideElementTypeForParamOrField(argument.getType().getTypeOfElement());
 
+            if (argument.getType().getTypeOfElement().toString().equals("STRING"))
+                elementType = "Ljava/lang/String;";
+            if (argument.getType().getTypeOfElement().toString().equals("ARRAYREF"))
+                elementType = "[Ljava/lang/String;";
+
+            code.append(elementType);
+        }
 
         code.append(")");
-        var returnType = method.getReturnType().getTypeOfElement();
 
-        if(returnType == ElementType.INT32){
-            code.append("I\n");
-        }
-        if (returnType == ElementType.BOOLEAN){
-            code.append("Z\n");
-        }
-        if (returnType == ElementType.VOID){
-            code.append("V\n");
-        }
-        if (returnType == ElementType.STRING){
-            code.append("Ljava/lang/String;\n");
-        }
-        if (returnType == ElementType.ARRAYREF){
-            code.append("Ljava/lang/String;\n");
-        }
-        else{
-            code.append("\n");
-        }
+        var returnType = decideElementTypeForParamOrField(method.getReturnType().getTypeOfElement());
 
+        if (method.getReturnType().getTypeOfElement().toString().equals("STRING"))
+            returnType = "Ljava/lang/String;";
+        if (method.getReturnType().getTypeOfElement().toString().equals("ARRAYREF"))
+            returnType = "[Ljava/lang/String;";
+
+        code.append(returnType).append(NL);
 
         // Add limits
         code.append(TAB).append(".limit stack 99").append(NL);
@@ -246,7 +212,6 @@ public class JasminGenerator {
         // get register
         var reg = currentMethod.getVarTable().get(operand.getName()).getVirtualReg();
 
-//        String operandType = decideElementTypeForParamOrField(operand.getType().getTypeOfElement());
         switch (operand.getType().getTypeOfElement()) {
             case INT32, BOOLEAN -> code.append("istore ").append(reg).append(NL);
             case STRING, OBJECTREF -> code.append("astore ").append(reg).append(NL);
@@ -267,7 +232,7 @@ public class JasminGenerator {
     private String generateOperand(Operand operand) {
         // get register
         var reg = currentMethod.getVarTable().get(operand.getName()).getVirtualReg();
-        // fazer um switch aqui
+
         String loadType = "";
         switch (operand.getType().getTypeOfElement()) {
             case INT32, BOOLEAN -> loadType = "iload " + reg + NL;
@@ -287,7 +252,25 @@ public class JasminGenerator {
         // apply operation
         var op = switch (binaryOp.getOperation().getOpType()) {
             case ADD -> "iadd";
+            case SUB -> "isub";
             case MUL -> "imul";
+            case DIV -> "idiv";
+            case SHR -> "ishr";
+            case SHL -> "ishl";
+            case SHRR -> "iushr";
+            case XOR -> "ixor";
+            case AND -> "iand";
+            case OR -> "ior";
+            case LTH -> "if_icmplt";
+            case GTH -> "if_icmpgt";
+            case EQ -> "if_icmpeq";
+            case NEQ -> "if_icmpne";
+            case LTE -> "if_icmple";
+            case GTE -> "if_icmpge";
+            case ANDB -> "iand";
+            case ORB -> "ior";
+            case NOTB -> "iconst_m1 \n ixor";
+            case NOT -> "iconst_1 \n ixor";
             default -> throw new NotImplementedException(binaryOp.getOperation().getOpType());
         };
 
@@ -299,11 +282,8 @@ public class JasminGenerator {
     private String generateReturn(ReturnInstruction returnInst) {
         var code = new StringBuilder();
 
-        // TODO: Hardcoded to int return type, needs to be expanded
-
-        if (returnInst.getElementType() == ElementType.VOID) {
+        if (returnInst.getElementType() == ElementType.VOID)
             code.append("\nreturn").append(NL);
-        }
         else {
             code.append(generators.apply(returnInst.getOperand()));
             code.append("\nireturn").append(NL);
@@ -314,7 +294,7 @@ public class JasminGenerator {
 
     private String generateCall(CallInstruction callInstruction) {
         var code  = new StringBuilder();
-        var operand = (Operand) callInstruction.getOperands().get(0);
+        var operand = (Operand) callInstruction.getOperands().getFirst();
 
         var invocationType = callInstruction.getInvocationType();
 
@@ -331,105 +311,69 @@ public class JasminGenerator {
     private String invokeSpecial(CallInstruction callInstruction) {
         var code = new StringBuilder();
 
-
-        code.append("invokespecial ").append(ollirResult.getOllirClass().getClassName()).append("/<init>");
-
+        var className = ollirResult.getOllirClass().getClassName();
+        code.append("invokespecial ").append(className).append("/<init>");
 
         code.append("(");
 
-        for (Element el : callInstruction.getArguments()) {
-            switch (el.getType().getTypeOfElement()) {
-                case INT32 -> code.append("I");
-                case BOOLEAN -> code.append("B");
-                case VOID -> code.append("V");
-                case STRING -> code.append("Ljava/lang/String;");
-            }
+        for (Element element : callInstruction.getArguments()) {
+            var elementType = element.getType().getTypeOfElement();
+            decideReturnTypeForInvokeOrPutGetField(code, elementType);
         }
 
         code.append(")");
 
         var returnType = callInstruction.getReturnType().getTypeOfElement();
 
-        switch (returnType) {
-            case INT32 -> code.append("I");
-            case BOOLEAN -> code.append("B");
-            case VOID -> code.append("V");
-            case STRING -> code.append("Ljava/lang/String;");
-        }
+        decideReturnTypeForInvokeOrPutGetField(code, returnType);
 
         return code.append("\n").toString();
     }
 
     private String invokeVirtual(CallInstruction callInstruction) {
-
         var code = new StringBuilder();
 
-        var caller = (ClassType) callInstruction.getCaller().getType();
-
-        code.append("invokevirtual ").append(caller.getName()).append("/");
+        var callerClassName = callInstruction.getCaller().getClass().getName();
+        code.append("invokevirtual ").append(callerClassName).append("/");
 
         var literal = (LiteralElement) callInstruction.getOperands().get(1);
-
         code.append(literal.getLiteral().replace("\"", ""));
 
         code.append("(");
 
-        for (Element el : callInstruction.getArguments()) {
-            switch (el.getType().getTypeOfElement()) {
-                case INT32 -> code.append("I");
-                case BOOLEAN -> code.append("B");
-                case VOID -> code.append("V");
-                case STRING -> code.append("Ljava/lang/String;");
-            }
+        for (Element element : callInstruction.getArguments()) {
+            var elementType = element.getType().getTypeOfElement();
+            decideReturnTypeForInvokeOrPutGetField(code, elementType);
         }
 
         code.append(")");
 
         var returnType = callInstruction.getReturnType().getTypeOfElement();
-
-        switch (returnType) {
-            case INT32 -> code.append("I");
-            case BOOLEAN -> code.append("B");
-            case VOID -> code.append("V");
-            case STRING -> code.append("Ljava/lang/String;");
-        }
+        decideReturnTypeForInvokeOrPutGetField(code, returnType);
 
         return code.append("\n").toString();
     }
 
     private String invokeStatic(CallInstruction callInstruction) {
-
         var code = new StringBuilder();
 
-        var caller = (Operand) callInstruction.getOperands().get(0);
-
-        code.append("invokestatic ").append(caller.getName()).append("/");
+        var callerOperandName = callInstruction.getOperands().getFirst().getClass().getName();
+        code.append("invokestatic ").append(callerOperandName).append("/");
 
         var literal = (LiteralElement) callInstruction.getOperands().get(1);
-
         code.append(literal.getLiteral().replace("\"", ""));
 
         code.append("(");
 
-        for (Element el : callInstruction.getArguments()) {
-            switch (el.getType().getTypeOfElement()) {
-                case INT32 -> code.append("I");
-                case BOOLEAN -> code.append("B");
-                case VOID -> code.append("V");
-                case STRING -> code.append("Ljava/lang/String;");
-            }
+        for (Element element : callInstruction.getArguments()) {
+            var elementType = element.getType().getTypeOfElement();
+            decideReturnTypeForInvokeOrPutGetField(code, elementType);
         }
 
         code.append(")");
 
         var returnType = callInstruction.getReturnType().getTypeOfElement();
-
-        switch (returnType) {
-            case INT32 -> code.append("I");
-            case BOOLEAN -> code.append("B");
-            case VOID -> code.append("V");
-            case STRING -> code.append("Ljava/lang/String;");
-        }
+        decideReturnTypeForInvokeOrPutGetField(code, returnType);
 
         return code.append("\n").toString();
     }
@@ -438,43 +382,54 @@ public class JasminGenerator {
     private String generatePutField(PutFieldInstruction putFieldInstruction) {
         var code = new StringBuilder();
 
-        var first_op = putFieldInstruction.getOperands().get(0);
-        var callerType = (ClassType) first_op.getType();
+        var firstOperand = putFieldInstruction.getOperands().getFirst();
+        var callerType = (ClassType) firstOperand.getType();
         var field = (Operand) putFieldInstruction.getOperands().get(1);
-        var third_op = putFieldInstruction.getOperands().get(2);
+        var fieldType = field.getType().getTypeOfElement();
+        var fieldName = field.getName();
+        var thirdOperand = putFieldInstruction.getOperands().get(2);
 
-        code.append(generators.apply(first_op)).append(generators.apply(third_op));
+        code.append(generators.apply(firstOperand)).append(generators.apply(thirdOperand));
+        code.append("putfield ").append(callerType.getName()).append("/").append(fieldName).append(" ");
 
-        code.append("putfield ").append(callerType.getName()).append("/").append(field.getName()).append(" ");
-
-        switch (field.getType().getTypeOfElement()) {
-            case INT32 -> code.append("I");
-            case BOOLEAN -> code.append("B");
-            case VOID -> code.append("V");
-            case STRING -> code.append("Ljava/lang/String;");
-        }
-
+        decideReturnTypeForInvokeOrPutGetField(code, fieldType);
         return code.toString();
     }
 
     private String generateGetField(GetFieldInstruction getFieldInstruction) {
         var code = new StringBuilder();
 
-        var first_op = getFieldInstruction.getOperands().get(0);
-        var callerType = (ClassType) first_op.getType();
+        var firstOperand = getFieldInstruction.getOperands().getFirst();
+        var callerType = (ClassType) firstOperand.getType();
         var field = (Operand) getFieldInstruction.getOperands().get(1);
+        var fieldType = field.getType().getTypeOfElement();
+        var fieldName = field.getName();
 
-        code.append(generators.apply(first_op));
+        code.append(generators.apply(firstOperand));
+        code.append("getfield ").append(callerType.getName()).append("/").append(fieldName).append(" ");
 
-        code.append("getfield ").append(callerType.getName()).append("/").append(field.getName()).append(" ");
+        decideReturnTypeForInvokeOrPutGetField(code, fieldType);
 
-        switch (field.getType().getTypeOfElement()) {
+        return code.append("\n").toString();
+    }
+
+    private void decideReturnTypeForInvokeOrPutGetField(StringBuilder code, ElementType returnType) {
+        switch (returnType) {
             case INT32 -> code.append("I");
             case BOOLEAN -> code.append("B");
             case VOID -> code.append("V");
             case STRING -> code.append("Ljava/lang/String;");
         }
+    }
 
-        return code.append("\n").toString();
+    private String decideElementTypeForParamOrField(ElementType elementType) {
+        return switch (elementType) {
+            case INT32 -> "I";
+            case BOOLEAN -> "Z";
+            case ARRAYREF, OBJECTREF, CLASS, STRING, THIS -> "A";
+            case VOID -> "V";
+            default -> throw new IllegalArgumentException("Unsupported return type: " + elementType);
+        };
     }
 }
+
